--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<!-- BODY -->
+<!-- body -->
 <body>
-  <header class="header">
+  <header>
     <section class="section t1">
       <div class="cnt c1">
         <p>Hello World.</p>
@@ -22,5 +22,15 @@
       </div>
     </section>
   </header>
+  <main>
+    <section>
+      <div class="m1">
+        <p>この大文字はどうなるかな</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body><!-- /body -->
 </html>
