--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hello World.</title>
+  <title>Hello World. 2022</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <!-- body -->
 <body>
+  <!-- header -->
   <header>
     <section class="section t1">
       <div class="cnt c1">
-        <p>Hello World.</p>
+        <h2>Hello World.2022</h2>
       </div>
     </section>
     <section class="section t2">
@@ -22,6 +24,8 @@
       </div>
     </section>
   </header>
+
+  <!-- main -->
   <main>
     <section>
       <div class="m1">
@@ -29,8 +33,11 @@
       </div>
     </section>
   </main>
-  <footer>
 
+  <!-- footer -->
+  <footer>
+    <div></div>
   </footer>
 </body><!-- /body -->
+
 </html>
