--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- header -->
   <header>
     <section class="section t1">
-      <div class="cnt c1">
-        <h2>Hello World.2022</h2>
+      <div class="txt-cnt c1">
+        <h2>Hello World. 2022</h2>
       </div>
     </section>
     <section class="section t2">
-      <div class="cnt c2">
-        <p>This is the site made by FUMI.</p>
+      <div class="txt-cnt c2">
+        <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank">fumijp28i</a>によって作られています。</p>
       </div>
     </section>
   </header>
