--- a/index.html
+++ b/index.html
@@ -13,23 +13,21 @@
 <body>
   <!-- header -->
   <header>
-    <section class="section t1">
-      <div class="txt-cnt c1">
-        <h2>Hello World. 2022</h2>
-      </div>
-    </section>
-    <section class="section t2">
-      <div class="txt-cnt c2">
-        <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank">fumijp28i</a>によって作られています。</p>
+    <section class="section-header">
+      <div class="innner">
+        <h2 class="txt-cnt">Hello World. 2022</h2>
+        <span class="txt-cnt c2">
+          <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank">@fumijp28i</a>によって作られています。</p>
+        </span>
       </div>
     </section>
   </header>
 
   <!-- main -->
   <main>
-    <section>
-      <div class="m1">
-        <p>この大文字はどうなるかな</p>
+    <section class="section-main">
+      <div class="main-1">
+        <p>この<span class="colorful">大文字</span>はどうなるかな</p>
       </div>
     </section>
   </main>
