--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <section class="section-header">
       <div class="innner">
-        <h2 class="txt-cnt">Hello World. 2022</h2>
+        <h2 class="txt-cnt c1">Hello World. 2022</h2>
         <span class="txt-cnt c2">
           <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank">@fumijp28i</a>によって作られています。</p>
         </span>
