--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="innner">
         <h2 class="txt-cnt c1">Hello World. 2022</h2>
         <span class="txt-cnt c2">
-          <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank">@fumijp28i</a>によって作られています。</p>
+          <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank"><b>@fumijp28i</b></a>によって作られています。</p>
         </span>
       </div>
     </section>
