--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- footer -->
   <footer>
-    <div></div>
+    <span><small>© fumijp28i 2022</small></span>
   </footer>
 </body><!-- /body -->
 
