--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
   <!-- footer -->
   <footer>
-    <span><small>© fumijp28i 2022</small></span>
+    <span class="copyright"><small>© fumijp28i 2022</small></span>
   </footer>
-</body><!-- /body -->
+</body>
+<!-- /body -->
 
 </html>
