構成見直し

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hello World. 2022</title>
+  <title>FUMI | fumijp28i.github.io</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,6 +29,21 @@
       <div class="main-1">
         <p>この<span class="colorful">大文字</span>はどうなるかな</p>
       </div>
+    </section>
+    <section class="bio">
+      <figure id="icon"></figure>
+      <h1 class="colorful">FUMI</h1>
+      <p>ふみ</p>
+      <hr>
+      <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / organic House などの音が好き。UKGや2-Step、Electro Swingも好き。クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。ピアノや生楽器を多用したリミックスを作りがち。</p>
+      <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集</p>
+    </section>
+    <section class="permlink">
+      <ul>
+        <li><a href="https://twitter.com/fumijp28i" target="_blank">Twitter</a></li>
+        <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">Mixcloud</a></li>
+        <li><a href="https://soundcloud.com/fumijp28i" target="_blank">Soundcloud</a></li>
+      </ul>
     </section>
   </main>
 
