構成見直し

--- a/index.html
+++ b/index.html
@@ -11,31 +11,14 @@
 
 <!-- body -->
 <body>
-  <!-- header -->
-  <header>
-    <section class="section-header">
-      <div class="innner">
-        <h2 class="txt-cnt c1">Hello World. 2022</h2>
-        <span class="txt-cnt c2">
-          <p>このサイトは<a href="https://twitter.com/fumijp28i" target="_blank"><b>@fumijp28i</b></a>によって作られています。</p>
-        </span>
-      </div>
-    </section>
-  </header>
-
   <!-- main -->
   <main>
-    <section class="section-main">
-      <div class="main-1">
-        <p>この<span class="colorful">大文字</span>はどうなるかな</p>
-      </div>
-    </section>
     <section class="bio">
       <figure id="icon"></figure>
       <h1 class="colorful">FUMI</h1>
       <p>ふみ</p>
       <hr>
-      <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / organic House などの音が好き。UKGや2-Step、Electro Swingも好き。クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。ピアノや生楽器を多用したリミックスを作りがち。</p>
+      <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / organic House などの音が好き。UKGや2-Step、Electro Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
       <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集</p>
     </section>
     <section class="permlink">
@@ -46,11 +29,6 @@
       </ul>
     </section>
   </main>
-
-  <!-- footer -->
-  <footer>
-    <span class="copyright"><small>© fumijp28i 2022</small></span>
-  </footer>
 </body>
 <!-- /body -->
 
