--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
         <h1 class="colorful">FUMI</h1>
         <p>ふみ</p>
         <hr>
-        <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / organic House などの音が好き。UKGや2-Step、Electro
-          Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
+        <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / organic House などの音が好き。UKGや2-Step、Electro Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
         <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集</p>
       </section>
       <section class="inner permlink">
         <ul>
-          <li><a href="https://twitter.com/fumijp28i" target="_blank">Twitter</a></li>
-          <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">Mixcloud</a></li>
-          <li><a href="https://soundcloud.com/fumijp28i" target="_blank">Soundcloud</a></li>
+          <li><a href="https://twitter.com/fumijp28i" target="_blank">🐤Twitter</a></li>
+          <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">🎵Mixcloud</a></li>
+          <li><a href="https://soundcloud.com/fumijp28i" target="_blank">☁️Soundcloud</a></li>
         </ul>
       </section>
     </section>
