--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </section>
       <section class="inner permlink">
         <ul>
-          <li><a href="https://twitter.com/fumijp28i" target="_blank">🐤Twitter</a></li>
-          <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">🎵Mixcloud</a></li>
-          <li><a href="https://soundcloud.com/fumijp28i" target="_blank">☁️Soundcloud</a></li>
+          <li><a href="https://twitter.com/fumijp28i" target="_blank">🐤<span class="r-b"></span>Twitter</a></li>
+          <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">🎵<span class="r-b"></span>Mixcloud</a></li>
+          <li><a href="https://soundcloud.com/fumijp28i" target="_blank">☁️<span class="r-b"></span>Soundcloud</a></li>
         </ul>
       </section>
     </section>
