--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p>ふみ</p>
         <hr>
         <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
+        <div class="_blank"></div>
         <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集</p>
       </section>
       <section class="inner permlink">
