--- a/index.html
+++ b/index.html
@@ -18,18 +18,40 @@
       <section class="inner bio">
         <figure id="icon"></figure>
         <h1 class="colorful">FUMI</h1>
-        <p>ふみ</p>
+        <span>ふみ</span>
         <hr>
+        <h2>BIO</h2>
         <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
-        <div class="_blank"></div>
-        <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集</p>
+        <div class="_blank "></div>
+        <br>
+        <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集 など</p>
       </section>
       <section class="inner permlink">
+        <h2>→</h2>
         <ul>
           <li><a href="https://twitter.com/fumijp28i" target="_blank">🐤<span class="r-b"></span>Twitter</a></li>
           <li><a href="https://www.mixcloud.com/fumijp28i/" target="_blank">🎵<span class="r-b"></span>Mixcloud</a></li>
           <li><a href="https://soundcloud.com/fumijp28i" target="_blank">☁️<span class="r-b"></span>Soundcloud</a></li>
         </ul>
+      </section>
+      <section class="inner works">
+        <h2>Works</h2>
+        <div class="soundcloud">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1293950650&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+          <div
+            style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+            <a href="https://soundcloud.com/zodiac13records" title="ZODIAC13 (Progressive Travelers)" target="_blank"
+              style="color: #cccccc; text-decoration: none;">ZODIAC13 (Progressive Travelers)</a> · <a
+              href="https://soundcloud.com/zodiac13records/06r-night-night-sky-fumi-remix"
+              title="06R - Night Night Sky (Fumi Remix) [Preview]" target="_blank"
+              style="color: #cccccc; text-decoration: none;">06R - Night Night Sky (Fumi Remix) [Preview]</a></div>
+        </div>
+        <div class="mixcloud">
+          <iframe width="100%" height="120"
+            src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffumijp28i%2F20220930-1_hour-monthly-mix-by-fumi-house%2F"
+            frameborder="0"></iframe>
+        </div>
       </section>
     </section>
   </main>
