--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <title>FUMI | fumijp28i.github.io</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 </head>
 
@@ -21,7 +22,10 @@
         <span>ふみ</span>
         <hr>
         <h2>BIO</h2>
-        <p>高校生からDTM、大学生からDJを始めた25歳。Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。<br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。<br>ピアノや生楽器を多用したリミックスを作りがち。</p>
+        <p>高校生からDTM、大学生からDJを始めた25歳。
+        <br>Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。
+        <br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。
+        <br>ピアノや生楽器を多用したリミックスを作りがち。</p>
         <div class="_blank "></div>
         <br>
         <p>できること：DJ・リミックス・音楽制作・WEBデザイン・動画編集・写真編集 など</p>
@@ -36,7 +40,8 @@
       </section>
       <section class="inner works">
         <h2>Works</h2>
-        <div class="soundcloud">
+        <div class="box soundcloud">
+          <h3>Remix</h3>
           <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1293950650&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
           <div
@@ -47,7 +52,8 @@
               title="06R - Night Night Sky (Fumi Remix) [Preview]" target="_blank"
               style="color: #cccccc; text-decoration: none;">06R - Night Night Sky (Fumi Remix) [Preview]</a></div>
         </div>
-        <div class="mixcloud">
+        <div class="box mixcloud">
+          <h3>1_Hour Monthly Mix</h3>
           <iframe width="100%" height="120"
             src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffumijp28i%2F20220930-1_hour-monthly-mix-by-fumi-house%2F"
             frameborder="0"></iframe>
