index.html 構成変更

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <!-- main -->
   <main>
     <section class="container">
-      <section class="inner bio">
+      <section class="inner face">
         <figure id="icon"></figure>
         <h1 class="colorful">FUMI</h1>
+      </section>
+      <section class="inner bio">
         <h2>BIO</h2>
         <p>高校生からDTM、大学生からDJを始めた25歳。
         <br>Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。
