index.html 構成変更

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       </section>
     </section>
   </main>
+  <footer>
+    <?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 157.29 59.05"><defs><style>.cls-1{fill:#fff;}</style></defs><g><g><path class="cls-1" d="M5,56.63V27.35c0-3.22-5-3.22-5,0v29.28c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M16.71,56.63V14.81c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M28.43,56.63V17.93c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M51.86,56.63V13.93c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M145.57,56.63V13.93c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M63.57,56.63V30.23c0-3.22-5-3.22-5,0v26.4c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M98.71,56.63c0-10.59,0-21.19,0-31.78,0-3.22-5-3.22-5,0,0,10.59,0,21.19,0,31.78,0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M75.29,56.63v-18.48c0-3.22-5-3.22-5,0v18.48c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M157.29,56.63v-18.48c0-3.22-5-3.22-5,0v18.48c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M110.43,56.63V19.09c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M133.86,56.63V19.09c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M87,56.63V31.81c0-3.22-5-3.22-5,0v24.82c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M40.14,56.63V2.41c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/><path class="cls-1" d="M122.14,56.63V2.41c0-3.22-5-3.22-5,0V56.63c0,3.22,5,3.22,5,0h0Z"/></g></g></svg>
+  </footer>
 
   <script>
     twemoji.parse(document.body);
