--- a/index.html
+++ b/index.html
@@ -42,21 +42,15 @@
         <h2>Works</h2>
         <div class="box soundcloud">
           <h3>Remix</h3>
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1293950650&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-          <div
-            style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-            <a href="https://soundcloud.com/zodiac13records" title="ZODIAC13 (Progressive Travelers)" target="_blank"
-              style="color: #cccccc; text-decoration: none;">ZODIAC13 (Progressive Travelers)</a> · <a
-              href="https://soundcloud.com/zodiac13records/06r-night-night-sky-fumi-remix"
-              title="06R - Night Night Sky (Fumi Remix) [Preview]" target="_blank"
-              style="color: #cccccc; text-decoration: none;">06R - Night Night Sky (Fumi Remix) [Preview]</a></div>
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1293950650&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=true&show_teaser=false"></iframe>
+        </div>
+        <div class="box beatport">
+          <h3>Beatport</h3>
+          <iframe src="https://embed.beatport.com/?id=16608533&type=track" width="100%" height="162" frameborder="0" scrolling="no"></iframe>
         </div>
         <div class="box mixcloud">
           <h3>1_Hour Monthly Mix</h3>
-          <iframe width="100%" height="120"
-            src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffumijp28i%2F20220930-1_hour-monthly-mix-by-fumi-house%2F"
-            frameborder="0"></iframe>
+          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffumijp28i%2F20220930-1_hour-monthly-mix-by-fumi-house%2F" frameborder="0"></iframe>
         </div>
       </section>
     </section>
@@ -64,7 +58,8 @@
 
   <footer>
     <div class="svg-musicwave">
-    <?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 157.29 59.05">
+    <?xml version="1.0" encoding="UTF-8"?>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 157.29 59.05">
       <defs>
         <style>
           .cls-1 {
