--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <section class="container">
       <section class="inner face">
         <figure id="icon"></figure>
-        <h1 class="colorful">FUMI</h1>
+        <h1 class="colorful">FUMI<span class="r-b"></span><span class="small">(JP)</span></h1>
       </section>
       <section class="inner bio">
         <h2>BIO</h2>
-        <p>高校生からDTM、大学生からDJを始めた25歳。
+        <p>兵庫県出身。高校生からDTM、大学生からDJを始めた25歳。
         <br>Tech / Minimal / Deep / Organic House などの音が好き。UKGや2-Step、Electro Swingも好き。
         <br>クラシックやジャズなどの生音を自身のルーツにしながら、サカナクションやPerfumeなどの電子音楽にも魅せられる。
         <br>ピアノや生楽器を多用したリミックスを作りがち。</p>
